made it through the end! now time to prune from lazysp and ibid!

--- a/defense-p0-intro.tex
+++ b/defense-p0-intro.tex
@@ -9,7 +9,7 @@
       \node[inner sep=0] at ( 2,5.0) {\includegraphics[width=3.5cm]{images/herb.jpg}};
       \node[inner sep=0] at ( 6,5.0) {\includegraphics[width=3.5cm]{images/arms.jpg}};
       \node[inner sep=0] at (10,5.0) {\includegraphics[width=3.5cm]{images/chimp.jpg}};
-      \node at ( 2,2.4) {Herb};
+      \node at ( 2,2.4) {HERB};
       \node at ( 6,2.4) {ARM-S};
       \node at (10,2.4) {CHIMP};
       
